--- a/html/tableau.html
+++ b/html/tableau.html
@@ -12,8 +12,8 @@
 <body>
     <div class="common layoutheader BestFontFamily">
         <span class="subheader"> |
-            <a href="../Index.html">index</a> |
-            <a href="About.html">about Me</a> |
+            <a href="../index.html">Index</a> |
+            <a href="about.html">About Me</a> |
             <a href="tableau.html">Tableau Dashboard</a> |
             <a href="https://public.tableau.com/app/discover">Tableau Public</a> <br>
             <span class="smallerfont" ><a href="#bottom" id="top">Jump to Bottom</a></span>
